--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="downloads/CV.pdf" class="btn" download="Dasith_Niwanthaka_CV">Download CV</a>
       </div>  
       <div class="home-img">  
-          <img src="images/ex.png" alt="">  
+          <img src="images/home.png" alt="">  
       </div>
     </section>
 
